--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <title>Spring Security Example </title>
-    </head>
-    <body>
-        <div th:if="${param.error}">
-            Invalid username and password.
-        </div>
-        <div th:if="${param.logout}">
-            You have been logged out.
-        </div>
-        <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
-        </form>
-    </body>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="layout">
+<head>
+<title>Fredbet - Login</title>
+</head>
+<body>
+	<h1 layout:fragment="header">This is the Fredbet login page</h1>
+	<div layout:fragment="content" class="container">
+		<h1>Login</h1>
+		<div th:if="${param.error}">Invalid username and password.</div>
+		<div th:if="${param.logout}">You have been logged out.</div>
+		<form th:action="@{/login}" method="post">
+			<div>
+				<div class="form-group">
+					<input type="text" name="username" placeholder="User Name" class="form-control" />
+				</div>
+				<div class="form-group">
+					<input type="password" name="password" placeholder="Password" class="form-control" />
+				</div>
+				<button type="submit" class="btn btn-success">Sign in</button>
+			</div>			
+		</form>
+	</div>
+</body>
 </html>
