--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -10,7 +10,7 @@
 <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.1/jquery.min.js" th:src="@{/webjars/jquery/2.1.1/jquery.min.js}"></script>
 <script src="http://cdn.jsdelivr.net/webjars/bootstrap/3.2.0/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/3.2.0/js/bootstrap.min.js}"></script>
 </head>
-<body>
+<body role="document">
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
@@ -31,10 +31,10 @@
 					<button type="submit" class="btn btn-success">Sign in</button>
 				</form>
 			</div>
-			<!--/.navbar-collapse -->
-			<h1 layout:fragment="header">Header Placeholder</h1>
-			<div layout:fragment="content">Content Placeholder</div>
 		</div>
 	</nav>
+	<div class="container" role="main">
+		<div layout:fragment="content" class="container" role="main" style="padding-top: 70px;">Content Placeholder</div>
+	</div>
 </body>
 </html>
