--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,11 +5,21 @@
 <title>Fredbet - Login</title>
 </head>
 <body>
-	<h1 layout:fragment="header">This is the Fredbet login page</h1>
 	<div layout:fragment="content" class="container">
 		<h1>Login</h1>
-		<div th:if="${param.error}">Invalid username and password.</div>
-		<div th:if="${param.logout}">You have been logged out.</div>
+		<div th:if="${param.error}">
+			<div class="alert alert-danger" role="alert">
+				<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <span class="sr-only">Error:</span> Invalid username and
+				password.
+			</div>
+		</div>
+
+		<div th:if="${param.logout}">
+			<div class="alert alert-info" role="alert">
+				<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <span class="sr-only">Info:</span> You have been logged
+				out.
+			</div>
+		</div>
 		<form th:action="@{/login}" method="post">
 			<div>
 				<div class="form-group">
@@ -19,7 +29,7 @@
 					<input type="password" name="password" placeholder="Password" class="form-control" />
 				</div>
 				<button type="submit" class="btn btn-success">Sign in</button>
-			</div>			
+			</div>
 		</form>
 	</div>
 </body>
