--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -18,15 +18,15 @@
 					aria-controls="navbar">
 					<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Project name</a>
+				<a class="navbar-brand" href="#">Fredbet</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
-				<form class="navbar-form navbar-right">
+				<form th:action="@{/login}" method="post" class="navbar-form navbar-right">
 					<div class="form-group">
-						<input type="text" placeholder="Email" class="form-control" />
+						<input type="text" name="username" placeholder="User Name" class="form-control" />
 					</div>
 					<div class="form-group">
-						<input type="password" placeholder="Password" class="form-control" />
+						<input type="password" name="password" placeholder="Password" class="form-control" />
 					</div>
 					<button type="submit" class="btn btn-success">Sign in</button>
 				</form>
