--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="layout">
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
 <head>
-<title>Fredbet - Login</title>
+	<title>Fredbet - Login</title>
 </head>
 <body>
 	<div layout:fragment="content" class="container">
