--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -29,7 +29,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li th:if="${@securityBean.isUserLoggedIn()} == false"><a href="#login" th:href="@{/login}">Login</a></li>
 					<li th:if="${@securityBean.isUserLoggedIn()} == true" class="dropdown"><a href="#" th:inline="text" class="dropdown-toggle"
-						data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello [[${#httpServletRequest.remoteUser}]] <span
+						data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">[[${#httpServletRequest.remoteUser}]] <span
 							class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="/logout" th:href="@{#}" onclick="$('#form').submit();">Logout</a>
