--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -25,6 +25,7 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#" th:href="@{/home}">Home</a></li>
 					<li><a href="#hello" th:href="@{/hello}">Hello</a></li>
+					<li><a href="#matches" th:href="@{/matches}">Spiele</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li th:if="${@securityBean.isUserLoggedIn()} == false"><a href="#login" th:href="@{/login}">Login</a></li>
