--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,29 +9,31 @@
 		<h1>Login</h1>
 		<div th:if="${param.error}">
 			<div class="alert alert-danger" role="alert">
-				<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <span class="sr-only">Error:</span> Invalid username and
-				password.
+				<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <span class="sr-only">Error:</span>
+				Invalid username and password.
 			</div>
 		</div>
 
 		<div th:if="${param.logout}">
 			<div class="alert alert-info" role="alert">
-				<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <span class="sr-only">Info:</span> You have been logged
-				out.
+				<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> <span class="sr-only">Info:</span> You
+				have been logged out.
 			</div>
 		</div>
-		<form th:action="@{/login}" method="post">			
-			<div>
-				<div class="form-group">
-					<input type="text" name="username" placeholder="User Name" class="form-control" />
+		<form th:action="@{/login}" method="post">
+			<div class="row">
+				<div class="col-sm-6 col-lg-3">
+					<div class="form-group">
+						<input type="text" name="username" placeholder="User Name" class="form-control" />
+					</div>
+					<div class="form-group">
+						<input type="password" name="password" placeholder="Password" class="form-control" />
+					</div>
+					<div class="checkbox">
+						<label><input type="checkbox" />Remember me</label>
+					</div>
+					<button type="submit" class="btn btn-success">Sign in</button>
 				</div>
-				<div class="form-group">
-					<input type="password" name="password" placeholder="Password" class="form-control" />
-				</div>
-				<div class="checkbox">
-					<label><input type="checkbox" />Remember me</label>
-				</div>
-				<button type="submit" class="btn btn-success">Sign in</button>
 			</div>
 		</form>
 	</div>
