--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<h2>Spielergebnisse</h2>
+		<h2>Spiele</h2>
 		<form class="form-inline" role="form" action="#" th:action="@{/matches}" method="post">
 			<div class="row">
 				<div class="col-sm-6 col-lg-3" th:each="match : ${allMatches}">
@@ -14,9 +14,11 @@
 						<label for="match1a" th:text="${match.teamOne.name}">Deutschland</label> <span> - </span> <label for="match1b" th:text="${match.teamTwo.name}">Italien</label>
 						<input id="match1" type="text" class="form-control form-size-small" th:value="${match.result.goalsTeamOne}?: ''" />
 						<input id="match1b" type="text" class="form-control form-size-small" th:value="${match.result.goalsTeamTwo}?: ''" />
+						<a href="view.html" th:href="@{'/' + ${match.id}}">Edit</a>
 					</div>
 				</div>				
-			</div>			
+			</div>
+			<a href="form.html" th:href="@{/matches(form)}">Spiel anlegen</a>			
 		</form>
 	</div>
 </body>
