--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -6,27 +6,26 @@
 </head>
 <body>
 	<div layout:fragment="content" class="container">
-		<form id="matchesForm" th:action="@{/matches/(form)}" th:object="${match}" action="#" method="post" role="form">
-			<div th:if="${#fields.hasErrors('*')}" class="alert alert-error">
-				<p th:each="error : ${#fields.errors('*')}" th:text="${error}">Validation error</p>
-			</div>
+		<div class="alert alert-success" th:if="${globalMessage}" th:text="${globalMessage}">Some Success message</div>
+		<form id="matchesForm" th:action="@{/matches/(form)}" th:object="${matchCommand}" action="#" method="post" role="form">			
 			<div class="row">
 				<div class="col-sm-6 col-lg-3">
+					<input type="hidden" th:field="*{matchId}" class="form-control" />
 					<div class="form-group">
-						<label for="teamOne.name">Team One Name</label> 
-						<input type="text" th:field="*{teamOne.name}" class="form-control" />						
+						<label for="teamNameOne">Team One Name</label> 
+						<input type="text" th:field="*{teamNameOne}" class="form-control" />						
 					</div>
 					<div class="form-group">
-						<label for="result.goalsTeamOne">Team One Goals</label>
-						<input type="text" th:field="*{result.goalsTeamOne}" class="form-control form-size-small" />
+						<label for="teamResultOne">Team One Goals</label>
+						<input type="text" th:field="*{teamResultOne}" class="form-control form-size-small" />
 					</div>
 					<div class="form-group">
-						<label for="teamTwo.name">Team Two Name</label> 
-						<input type="text" th:field="*{teamTwo.name}" class="form-control" />						
+						<label for="teamNameTwo">Team Two Name</label> 
+						<input type="text" th:field="*{teamNameTwo}" class="form-control" />						
 					</div>
 					<div class="form-group">
-						<label for="result.goalsTeamTwo">Team Two Goals</label>
-						<input type="text" th:field="*{result.goalsTeamTwo}" class="form-control form-size-small" />
+						<label for="teamResultTwo">Team Two Goals</label>
+						<input type="text" th:field="*{teamResultTwo}" class="form-control form-size-small" />
 					</div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-default">Submit</button>
