--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -12,8 +12,8 @@
 				<div class="col-sm-6 col-lg-3" th:each="match : ${allMatches}">
 					<div class="form-group">						
 						<label for="match1a" th:text="${match.teamOne.name}">Deutschland</label> <span> - </span> <label for="match1b" th:text="${match.teamTwo.name}">Italien</label>
-						<input id="match1" type="text" class="form-control form-size-small" th:value="${match.result.goalsTeamOne}?: ''" />
-						<input id="match1b" type="text" class="form-control form-size-small" th:value="${match.result.goalsTeamTwo}?: ''" />
+						<input id="match1" type="text" class="form-control form-size-small" th:value="${match.goalsTeamOne}?: ''" />
+						<input id="match1b" type="text" class="form-control form-size-small" th:value="${match.goalsTeamTwo}?: ''" />
 						<a href="view.html" th:href="@{'/matches/' + ${match.id}}">Edit</a>
 					</div>
 				</div>				
