--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<div layout:fragment="content">
+		<div class="alert alert-success" th:if="${globalMessage}" th:text="${globalMessage}">Some Success message</div>
 		<h2>Spiele</h2>
 			<div class="row">
 				<div class="col-sm-6 col-lg-3" th:each="match : ${allMatches}">
