--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -19,7 +19,7 @@
 					</div>					
 				</div>				
 			</div>
-			<a href="form.html" th:href="@{/matches(form)}">Spiel anlegen</a>			
+			<a href="#" th:href="@{/matches(form)}" class="btn btn-primary" role="button">Spiel anlegen</a>	
 	</div>
 </body>
 </html>
