--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -19,8 +19,7 @@
 					<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="home.html" th:href="@{/home}"><span class="glyphicon glyphicon-home"></span>
-					Fredbet</a>
+				<a class="navbar-brand" href="home.html" th:href="@{/matches}"><span class="glyphicon glyphicon-home"></span></a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
