--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -28,7 +28,7 @@
 						<input type="text" th:field="*{teamResultTwo}" class="form-control form-size-small" />
 					</div>
 					<div class="form-group">
-						<button type="submit" class="btn btn-default">Submit</button>
+						<button type="submit" class="btn btn-primary">Speichern</button>
 					</div>
 				</div>
 			</div>
