--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -9,7 +9,7 @@
 		<div class="alert alert-success" th:if="${globalMessage}" th:text="${globalMessage}">Some Success message</div>
 		<form id="matchesForm" th:action="@{/matches/(form)}" th:object="${matchCommand}" action="#" method="post" role="form">			
 			<div class="row">
-				<div class="col-sm-6 col-lg-3">
+				<div class="col-xs-12 col-sm-6 col-md-4">
 					<input type="hidden" th:field="*{matchId}" class="form-control" />
 					<div class="form-group">
 						<label for="teamNameOne">Team One Name</label> 
