changed url mapping to create

--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -22,7 +22,7 @@
 					</div>					
 				</div>				
 			</div>
-			<a href="#" th:href="@{/matches(form)}" class="btn btn-primary" role="button">Spiel anlegen</a>	
+			<a href="#" th:href="@{/matches/create}" class="btn btn-primary" role="button">Spiel anlegen</a>	
 	</div>
 </body>
 </html>
