--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -12,12 +12,12 @@
 				<div class="col-xs-12 col-sm-6 col-md-4" th:each="match : ${allMatches}">
 					<div class="panel panel-default">
 					  <div class="panel-body">
-					    <span th:text="${match.teamOne.name}">Deutschland</span> <span> - </span><span th:text="${match.teamTwo.name}">Italien</span>
-						<span class="badge" th:text="${match.goalsTeamOne}">2</span><span> - </span><span class="badge" th:text="${match.goalsTeamTwo}">1</span>
-						<div class="btn-group pull-right" role="group">
-							<a href="#" th:href="@{'/matches/' + ${match.id}}" class="btn-sm btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
-							<a href="#" class="btn-sm btn-info" role="button"><span class="glyphicon glyphicon-hand-up"></span></a>	
-						</div>
+					  		<span th:text="${match.teamOne.name}">Deutschland</span> <span> - </span><span th:text="${match.teamTwo.name}">Italien</span>
+							<span class="badge success" th:text="${match.goalsTeamOne}">2</span><span> - </span><span class="badge" th:text="${match.goalsTeamTwo}">1</span>
+							<div class="btn-group pull-right" role="group">
+								<a href="#" th:href="@{'/matches/' + ${match.id}}" class="btn-sm btn-info" role="button"><span class="glyphicon glyphicon-pencil"></span></a>
+								<a href="#" th:href="@{'/bet/createOrUpdate/' + ${match.id}}" class="btn-sm btn-info" role="button"><span class="glyphicon glyphicon-hand-up"></span></a>	
+							</div>
 					  </div>
 					</div>					
 				</div>				
