--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -27,6 +27,7 @@
 					</ul>
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary">Speichern</button>
+						<a href="#" th:href="@{/user}" class="btn btn-default" role="button">Abbrechen</a>	
 					</div>
 				</div>
 			</div>
