--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -20,7 +20,7 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#matches" th:href="@{/matches}">Spiele</a></li>
 					<li><a href="#bet" th:href="@{/bet}">Meine Tipps</a></li>
-					<li><a href="#user" th:href="@{/user}">Benutzer</a></li>
+					  	<li sec:authorize="hasRole('ROLE_ADMIN')"><a href="#user" th:href="@{/user}">Benutzer</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li th:if="${@securityBean.isUserLoggedIn()} == false"><a href="#login" th:href="@{/login}"><span
