implemented remember me

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,10 +29,11 @@
 					<div class="form-group">
 						<input type="password" name="password" placeholder="Password" class="form-control" />
 					</div>
-					<div class="checkbox">
-						<label><input type="checkbox" />Remember me</label>
-					</div>
-					<button type="submit" class="btn btn-success">Sign in</button>
+					<div class="form-group">
+        				<input type="checkbox" name="remember-me" id="remember-me"/>
+						<label for="remember-me">Auto-Login</label>
+					</div>					
+					<button type="submit" class="btn btn-success">Anmelden</button>
 				</div>
 			</div>
 		</form>
