--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -21,6 +21,7 @@
 					<li class="active"><a href="#matches" th:href="@{/matches}">Spiele</a></li>
 					<li><a href="#bet" th:href="@{/bet}">Meine Tipps</a></li>
 					<li><a href="#bet" th:href="@{/bet/open}">noch zu tippen</a></li>
+					<li><a href="#bet" th:href="@{/ranking}">Ranking</a></li>
 				  	<li sec:authorize="hasRole('ROLE_ADMIN')"><a href="#user" th:href="@{/user}">Benutzer</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
