--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -28,6 +28,10 @@
 						<input type="text" th:field="*{teamResultTwo}" class="form-control form-size-small" />
 					</div>
 					<div class="form-group">
+						<label for="teamResultTwo">Anstoss:</label>
+						<input type="date" th:field="*{kickOffDate}" class="form-control" th:value="${#dates.format(matchCommand.kickOffDate, 'dd.MM.yyyy HH:mm')}"/>
+					</div>
+					<div class="form-group">
 						<button type="submit" class="btn btn-primary">Speichern</button>
 					</div>
 				</div>
