--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -32,6 +32,14 @@
 						<input type="date" th:field="*{kickOffDate}" class="form-control" th:value="${#dates.format(matchCommand.kickOffDate, 'dd.MM.yyyy HH:mm')}"/>
 					</div>
 					<div class="form-group">
+						<label for="teamResultTwo">Stadium:</label>
+						<input type="text" th:field="*{stadium}" class="form-control"/>
+					</div>
+					<div class="form-group">
+						<label for="teamResultTwo">Gruppe:</label>
+						<input type="text" th:field="*{group}" class="form-control"/>
+					</div>
+					<div class="form-group">
 						<button type="submit" class="btn btn-primary">Speichern</button>
 					</div>
 				</div>
