--- a/src/main/resources/templates/matches/form.html
+++ b/src/main/resources/templates/matches/form.html
@@ -29,7 +29,7 @@
 					</div>
 					<div class="form-group">
 						<label for="teamResultTwo">Anstoss:</label>
-						<input type="date" th:field="*{kickOffDate}" class="form-control" th:value="${#dates.format(matchCommand.kickOffDate, 'dd.MM.yyyy HH:mm')}"/>
+						<input type="text" th:field="*{kickOffDate}" class="form-control" th:value="${#dates.format(matchCommand.kickOffDate, 'dd.MM.yyyy HH:mm')}"/>
 					</div>
 					<div class="form-group">
 						<label for="teamResultTwo">Stadium:</label>
